# monk_engine

./: .gitmodules  CMakeLists.txt  README.md  build.bat  genie.lua
assets/: fs_cubes.sc  fs_mesh.sc  varying.def.sc  vs_mesh.sc
lib/debug/: zlibstaticd.lib
scripts/: build_shader_win.bat
src/: camera.cpp  camera.h  cubes.cpp  game_state.h  input.cpp  input.h  logic.cpp  logic.h  main.cpp  math.h  mesh.cpp  mesh.h  monk_math.cpp  monk_math.h  render.cpp  render.h  render_state.h  resources.cpp  resources.h  transform.h  types.h  vertex.h
